--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -23,13 +23,15 @@ Editor Improvements:
 ✓ Can be cancelled with ESC
 ✓ Allow movement to be selected
 ✓ When route chose, units move
-* Update data after move; stop selections during move
+✓ Update data after move; stop selections during move
 ✓ Add sounds
-* Playtest and make it "pop" and work with no obvious issues
+✓ Playtest and make it "pop" and work with no obvious issues
 ✓ Fix bug where camera can see sky when at top of mapboard: Could not replicate
 ✓ Code cleanup:
 ✓	Decide how id should be handled. Consider adding more functions to data
 ✓	Document what knows about what, how ownership is decided etc
+* Rotate unit during move
+* If the mouse is over the node with the moving unit, do not highlight a move arrow
 * This completes part 1 of "Goals for v0.2"
 
 
